fixed image scaling on small devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -264,7 +264,7 @@ main,
 
 .cart-item img{
   width: 30%;
-  height: fit-content;
+  height: 30%;
 }
 
 /*Footer Styles*/
